[package]
name = "serial_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
home = "0.5.4"
serialport = "4.2.0"

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = true

[profile.release]
opt-level = 3           # Use best optimizations
strip = true     # Use strip option to eleminate debug information and symbols
debug = false
split-debuginfo = 'off'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
